                W I N G   C H A N G E S
----------------------------------------------------------
This file tracks the changes to Wing over time. Especially
with respect to new features and compatibility changes.
==========================================================

2016-03-28
 * wing.angular.js objectListManager now has call() and reset() methods.

2016-03-23
 * wing.angular.js objectManager now passes behavior fetch_options to delete().

2016-03-12
 * Added "generate_password_reset_code" method to Wing::Role::Result::User.

2016-03-11
 * Added the can_link_to method in Wing::DB::Result, which is used for owner checking in Wing::Role::Result::Parent.

2016-03-09
 * Broke out installs for different systems into their own README files. Thanks to Jim Edwards for his help on this.

2016-02-21
 * Added Wing::Role::Result::UriPartOnInit to set a uri_part only when an object is first created.

2016-02-04
 * wing.js errors now go away after 12 seconds and warnings go away after 10 seconds.

2016-01-28
 * Force UTC time zone on DateTime objects going into/out of the database.

2016-01-26
 * Wing::ContentFilter makes a shorter prettier note for external links now.

2016-01-15
 * Thanks to Chan Wilson for all his feedback on this set of changes.
 * Added a message to wing class to let you know where you can access your newly created object.
 * Added Test::Trap and JSON::XS to bin/setup/03_install_perl_modules.sh to make installs flow easier.
 * Added a note as to where you can find the logs in README.txt.
 * Indicated what services need to be restarted after you add a class in README.txt. 

2016-01-12
 * Removed fetch_create_options from wing.angular.js because fetch_options is better.
 * Added WingAngular.pod documentation for wing.angular.js.
 * Added the Wing Command kick module so that you can kick buried wingman jobs.

2015-12-29
 * Updated the javascript libraries to the latest versions.

2015-12-17 