@@ -4,6 +4,9 @@ This file tracks the changes to Wing over time. Especially
 with respect to new features and compatibility changes.
 ==========================================================
 
+2016-03-30
+ * Added checklist directive to wing.angular.js
+
 2016-03-28
  * wing.angular.js objectListManager now has call() and reset() methods.
 
